# np-nurbs

./: README.md  pyproject.toml  speed_comparison.py
cuda_nurbs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/source/: api.rst  conf.py  index.rst  install.rst
docs/source/_autosummary/: np_nurbs.bezier.bezier_curve_anyderiv_grid.rst  np_nurbs.bezier.bezier_curve_d2cdt2_grid.rst  np_nurbs.bezier.bezier_curve_dcdt_grid.rst  np_nurbs.bezier.bezier_curve_eval_grid.rst  np_nurbs.bezier.bezier_surf_eval_grid.rst  np_nurbs.bezier.rst  np_nurbs.generate_cpu_coefficient_matrix.rst  np_nurbs.rational_bezier.rational_bezier_curve_eval_grid.rst  np_nurbs.rational_bezier.rational_bezier_surf_eval_grid.rst  np_nurbs.rational_bezier.rst  np_nurbs.rst  np_nurbs.version.get_major_project_version.rst  np_nurbs.version.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: custom-class-template.rst
np_nurbs/: __init__.py  bezier.py  rational_bezier.py  version.py
np_nurbs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
speed_comparison.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_bezier.py  test_rational_bezier.py
