[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "np-nurbs"
version = "0.1.0"
authors = [
    {name = "Matthew G Lauer"}
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "rust_nurbs",
    "pytest",
]

[tool.setuptools]
packages = [
    "np_nurbs"
]

